--- a/Plot/Circos/circos_Young_hist.conf
+++ b/Plot/Circos/circos_Young_hist.conf
@@ -8,7 +8,7 @@
 </image>
 
 #karyotype = /home/xiy010/tools/circos-0.69-6/circos-0.69-6/data/karyotype/karyotype.human.hg19.txt
-#chromosomes_units = 100000
+#chromosomes_units = 1000000
 #chromosomes_display_default = yes
 
 <plots>
@@ -21,62 +21,41 @@
 #r0 = 0.5r
 #r1 = 0.8r
 
-
-
 <plot>
 show = yes
 type = histogram
-file = data/Old_Sperm_AF_SQRT.txt
+file = data/Young_Sperm.txt
 fill_color = 107010
 min = 0
-max = 7
-r0 = 0.62r
-r1 = 0.85r
+max = 10
+r0 = 0.7r
+r1 = 0.84r
 thickness = 0
 </plot>
-
-
 
 <plot>
 show = yes
 type = histogram
-file = data/Old_Blood_AF_SQRT.txt
-fill_color =ff5b00
+file = data/Young_Shared.txt
+fill_color = 653700
 min = 0
-max = 7
-r0 = 0.38r
-r1 = 0.61r
+max = 10
+r0 = 0.55r
+r1 = 0.69r
+thickness = 0
+</plot>
+
+<plot>
+show = yes
+type = histogram
+file = data/Young_Blood.txt
+fill_color = ff5b00
+min = 0
+max = 10
+r0 = 0.42r
+r1 = 0.54r
 #fill_color = white
 thickness = 0
 </plot>
-
-
-<plot>
-show = yes
-type = histogram
-file = data/Old_Sperm_SHARED_AF_SQRT.txt
-fill_color = 653700
-min = 0
-max = 7
-r0 = 0.62r
-r1 = 0.85r
-thickness = 0
-</plot>
-
-
-<plot>
-show = yes
-type = histogram
-file = data/Old_Blood_SHARED_AF_SQRT.txt
-fill_color = 653700
-min = 0
-max = 7
-r0 = 0.38r
-r1 = 0.61r
-#fill_color = white
-thickness = 0
-</plot>
-
-
 
 </plots>
